--- a/module11/src/main/resources/templates/index.html
+++ b/module11/src/main/resources/templates/index.html
@@ -85,6 +85,9 @@
                 return responce.text();
         }).then(function (data) {
                 console.log(data);
+
+                alert(data);
+                location.reload();
         })
     }
 
